--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "forceConsistentCasingInFileNames": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "downlevelIteration": true
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist"]
