--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
     "name": "@chartisan/chartjs",
-    "version": "1.0.0",
-    "description": "The next generation charting experience",
+    "description": "Chartisan's Chart.js frontend.",
+    "version": "0.1.0",
+    "author": "Èrik Campobadal Forés <soc@erik.cat>",
+    "license": "MIT",
     "main": "dist/chartisan_chartjs.js",
-    "types": "dist/types/index.d.ts",
+    "source": "src/index.ts",
+    "types": "dist/index.d.ts",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/chartisan/chartjs.git"
     },
     "scripts": {
-        "dev": "rollup -c --environment BUILD:development",
-        "build": "tsc && rollup -c --environment BUILD:production",
-        "watch": "rollup -c --environment BUILD:development --watch"
+        "dev": "ultrabundle",
+        "watch": "ultrabundle --watch",
+        "prod": "ultrabundle --optimize",
+        "docs": "typedoc src",
+        "release": "npm run prod && npm run docs"
     },
-    "keywords": [],
-    "author": "Èrik Campobadal Forés <soc@erik.cat>",
-    "license": "MIT",
+    "files": [
+        "dist"
+    ],
+    "keywords": [
+        "Chart",
+        "Charts",
+        "Chartisan",
+        "Plot",
+        "Plots",
+        "Graphic",
+        "Graphics"
+    ],
     "devDependencies": {
-        "@babel/core": "^7.7.7",
-        "@babel/plugin-proposal-class-properties": "^7.7.4",
-        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
-        "@babel/plugin-proposal-object-rest-spread": "^7.7.7",
-        "@babel/plugin-proposal-optional-chaining": "^7.7.5",
-        "@babel/preset-env": "^7.7.7",
-        "@babel/preset-typescript": "^7.7.7",
-        "@rollup/plugin-node-resolve": "^6.0.0",
         "@types/chart.js": "^2.9.5",
-        "@types/node": "^12.12.21",
-        "rollup": "^1.27.14",
-        "rollup-plugin-babel": "^4.3.3",
-        "rollup-plugin-commonjs": "^10.1.0",
-        "rollup-plugin-gzip": "^2.2.0",
-        "rollup-plugin-postcss": "^2.0.3",
-        "rollup-plugin-terser": "^5.1.3",
-        "typescript": "^3.7.3"
+        "typescript": "^3.7.3",
+        "ultrabundle": "^0.1.0",
+        "typedoc": "^0.16.5"
     },
     "dependencies": {
         "@chartisan/chartisan": "file:../chartisan",
